# FileManageCpp

./: CMakeCache.txt  CMakeLists.txt  FileManageC  Makefile  README.md  cmake_install.cmake  main.c  main.cc
Boot/Debug/: debug.h  debug.hh
FileManage/FileCopy/: txt_exten_file_copy.c  txt_exten_file_copy.h
FileManage/FileName/: files_exten.c  files_exten.cc  files_exten.h
FlagsAnalys/: allow_flags.hh  flags_analys.cc  flags_analys.hh
boot/system/: System.c
file/FileCopy/: file_copy_hex.c  file_copy_txt.c
file/FileName/: file_exten.c
file/copy/: bin.c  file_copy_bin.c  file_copy_txt.c  txt.c
file/name/: exten.c  file_exten.c  fname.c
file/rbin/: bin_converter.c
flags/: flags_analys.c
include/: LNX.h  bin_converter.h  copy.h  debug.h  exten.h  file_copy.h  file_exten.h  flag.h  flags_analys.h  fname.h  system.h
res/: text123.temp  text123.txt
